First commit of new pagetype-configrepository
The next release will remove all controller-centric code out of cmsable.
Configurations of pages will no longer rely on any controller or class.
It will be bounded to the pagetype.
So no more class-bounded db-entries and all controller depending code
will be deleted.
The only remaining controller-related part will be ControllerCreator,
which will boot/create your controller like before.
But this does not mean that you have to do something with your
controller. Configure the dependencies of your controller.

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
     "ems/formobject": "dev-master",
     "ems/beetree":"dev-master"
   },
+  "require-dev": {
+    "mockery/mockery": "~0.9"
+  },
   "autoload": {
     "psr-0": {
       "Cmsable": "src/"
