--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "laravel/framework": "5.0.*",
+    "laravel/framework": "5.0.*|5.1.*",
     "ems/collection": "0.1.*",
     "ems/signal": "0.1.*",
     "ems/xtype": "0.1.*",
